--- a/PatternsGenerator/PatternsGenerator/src/main/resources/templates/home.html
+++ b/PatternsGenerator/PatternsGenerator/src/main/resources/templates/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymyleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>home</title>
 </head>
 <body>
+    <p th:text="${test}">Content</p>
     <p>Test home page</p>
 </body>
 </html>
