Updated Singleton with getters and setters

--- a/PatternsGenerator/src/main/resources/templates/home.html
+++ b/PatternsGenerator/src/main/resources/templates/home.html
@@ -5,7 +5,8 @@
     <title>home</title>
 </head>
 <body>
-    <p th:text="${test}">Content</p>
-    <p>Test home page</p>
+    <p>Test Singleton generated from fixed values:</p>
+    <pre th:text="${test}">Content</pre>
+
 </body>
 </html>
