--- a/PatternsGenerator/src/main/resources/templates/home.html
+++ b/PatternsGenerator/src/main/resources/templates/home.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>home</title>
 </head>
-<body>
-    <p>Test Singleton generated from fixed values:</p>
-    <pre th:text="${test}">Content</pre>
 
+<body>
+    <div th:insert="layout/header"></div>
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Object Technologies' Project</h1>
+            <p class="lead">This application was created as an university project. It generates code of several patterns (based on the Gang of Four's book).</p>
+            <p>Authors: Michał Wąsik, Michał Patyna</p>
+        </div>
+    </div>
 </body>
 </html>
+
