--- a/PatternsGenerator/src/main/resources/templates/home.html
+++ b/PatternsGenerator/src/main/resources/templates/home.html
@@ -15,6 +15,8 @@
             <p>Authors: Michał Wąsik, Michał Patyna</p>
         </div>
     </div>
+
+    <div th:insert="layout/footer"></div>
 </body>
 </html>
 
