--- a/PatternsGenerator/src/main/resources/templates/layout/footer.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/footer.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
+    <title>footer</title>
+    <style>
+        .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+    </style>
 </head>
 <body>
+    <br />
+
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">Copyright. Michał Wąsik, Michał Patyna</span>
+        </div>
+    </footer>
 
 </body>
 </html>
