--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -26,6 +26,18 @@
                             <a class="dropdown-item" href="observator">Observator</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Knowledge base
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="singletonData">Singleton</a>
+                            <a class="dropdown-item" href="observatorData">Observator</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="credits">Credits<span class="sr-only">(current)</span></a>
+                    </li>
                 </ul>
             </div>
         </nav>
