--- a/PatternsGenerator/src/main/resources/templates/singleton.html
+++ b/PatternsGenerator/src/main/resources/templates/singleton.html
@@ -3,33 +3,27 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>singleton</title>
-    <script language="Javascript" >
-        function downloadDiv(filename, elementId, mimeType) {
-            var elementHtml = document.getElementById(elementId).innerHTML;
-            var link = document.createElement('a');
-            mimeType = mimeType || 'text/plain';
-
-            link.setAttribute('download', filename);
-            link.setAttribute('href', 'data:' + mimeType  +  ';charset=utf-8,' + encodeURIComponent(elementHtml));
-            link.click();
-        }
-</script>
+    <script language="Javascript" type="text/javascript" src="/js/DownloadFile.js"></script>
+    <script language="Javascript" type="text/javascript" src="/js/ValidateForm.js"></script>
 </head>
 
 <body>
 <div th:insert="layout/header"></div>
 
 
-
+<div id = "alert_placeholder"></div>
 <div class="container">
     <div class="container">
         <p class="lead">Singleton generator</p>
     </div>
-        <form action="singleton" method="post">
+        <form class='needs-validation' action="singleton" method="post" novalidate>
             <div class="form-group row">
                 <div class="col-sm-10">
                     <label for="className">Write name of Singleton's class</label>
-                    <input type="text" id="className" name="className" class="form-control" placeholder="class name">
+                    <input type="text" id="className" name="className" class="form-control" placeholder="class name" required>
+                    <div class="invalid-feedback">
+                        Class name should not be empty.
+                    </div>
                 </div>
             </div>
             <div class="form-group">
