Refactored "Observator" to "Visitor". Why was I using wrong name all that time?

--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -23,7 +23,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="singleton">Singleton</a>
-                            <a class="dropdown-item" href="observator">Observator</a>
+                            <a class="dropdown-item" href="visitor">Visitor</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="singletonData">Singleton</a>
-                            <a class="dropdown-item" href="observatorData">Observator</a>
+                            <a class="dropdown-item" href="visitorData">Visitor</a>
                         </div>
                     </li>
                     <li class="nav-item active">
