--- a/PatternsGenerator/src/main/resources/templates/visitor.html
+++ b/PatternsGenerator/src/main/resources/templates/visitor.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <title>observator</title>
+        <title>visitor</title>
         <script language="Javascript" type="text/javascript" src="/js/DownloadFile.js"></script>
         <script language="Javascript" type="text/javascript" src="/js/ValidateForm.js"></script>
     </head>
@@ -12,13 +12,13 @@
 
         <div class="container">
             <div class="container">
-                <p class="lead">Observator generator</p>
+                <p class="lead">Visitor generator</p>
             </div>
-            <form class='needs-validation' action="observator" method="post" novalidate>
+            <form class='needs-validation' action="visitor" method="post" novalidate>
                 <div class="form-group row">
                     <div class="col">
-                        <label for="className">Write name of Observator class</label>
-                        <input type="text" id="className" name="className" class="form-control" placeholder="observator class name" required>
+                        <label for="className">Write name of Visitor class</label>
+                        <input type="text" id="className" name="className" class="form-control" placeholder="visitor class name" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -26,8 +26,8 @@
                 </div>
                 <div class="form-group row">
                     <div class="col">
-                        <label for="observatedName">Write name of Observated class</label>
-                        <input type="text" id="observatedName" name="observatedName" class="form-control" placeholder="observated class name" required>
+                        <label for="visitedName">Write name of Visited class</label>
+                        <input type="text" id="visitedName" name="visitedName" class="form-control" placeholder="visited class name" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="col">
-                        <label for="updateMethodName">Write name of method which updates Observator's state</label>
+                        <label for="updateMethodName">Write name of method which updates Visitor state</label>
                         <input type="text" id="updateMethodName" name="updateMethodName" class="form-control" placeholder="update method name" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
@@ -44,40 +44,40 @@
                 </div>
                 <div class="form-group row">
                     <div class="col">
-                        <label for="changeStateMethodName">Write name of method which changes Observator's state</label>
+                        <label for="changeStateMethodName">Write name of method which changes Visitor state</label>
                         <input type="text" id="changeStateMethodName" name="changeStateMethodName" class="form-control" placeholder="state changing method name" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
                     </div>
                 </div>
-                <label>Define type and name of state field in Observator class</label>
+                <label>Define type and name of state field in Visitor class</label>
                 <div class="form-group row">
                     <div class="col">
-                        <input type="text" id="stateType" name="stateType" class="form-control" placeholder="Type of Observator's state" required>
+                        <input type="text" id="stateType" name="stateType" class="form-control" placeholder="Type of Visitor state" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
                     </div>
 
                     <div class="col">
-                        <input type="text" id="stateName" name="stateName" class="form-control" placeholder="Name of Observated's state" required>
+                        <input type="text" id="stateName" name="stateName" class="form-control" placeholder="Name of Visitor state" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
                     </div>
 
                 </div>
-                <label>Define type and name of state field in Observated class</label>
+                <label>Define type and name of state field in Visited class</label>
                 <div class="form-group row">
                     <div class="col">
-                        <input type="text" id="observatedState" name="observatedState" class="form-control" placeholder="Type of Observated's state" required>
+                        <input type="text" id="visitedState" name="visitedState" class="form-control" placeholder="Type of Visited state" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
                     </div>
                     <div class="col">
-                        <input type="text" id="observatedStateObject" name="observatedStateObject" class="form-control" placeholder="Name of Observated's state" required>
+                        <input type="text" id="visitedStateObject" name="visitedStateObject" class="form-control" placeholder="Name of Visited state" required>
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -103,51 +103,51 @@
             </form>
 
             <div class="container">
-                <p class="lead">Generated code - Observator interface</p>
+                <p class="lead">Generated code - Visitor interface</p>
             </div>
             <div class="card">
                 <div class="card-body" >
-                    <pre id="toDownload1" th:text="${observatorInterfaceCode}"></pre>
+                    <pre id="toDownload1" th:text="${visitorInterfaceCode}"></pre>
                 </div>
             </div>
             <br />
-            <button type="button" class="btn btn-primary" onclick="downloadDiv('ObservatorInterface.java', 'toDownload1', 'text/plain')">Download code file</button>
+            <button type="button" class="btn btn-primary" onclick="downloadDiv('VisitorInterface.java', 'toDownload1', 'text/plain')">Download code file</button>
 
         <div class="container">
             <br />
-            <p class="lead">Generated code - Observator class</p>
+            <p class="lead">Generated code - Visitor class</p>
         </div>
         <div class="card">
             <div class="card-body" >
-                <pre id="toDownload2" th:text="${observatorClassCode}"></pre>
+                <pre id="toDownload2" th:text="${visitorClassCode}"></pre>
             </div>
         </div>
         <br />
-        <button type="button" class="btn btn-primary" onclick="downloadDiv('Observator.java', 'toDownload2', 'text/plain')">Download code file</button>
+        <button type="button" class="btn btn-primary" onclick="downloadDiv('Visitor.java', 'toDownload2', 'text/plain')">Download code file</button>
 
         <div class="container">
             <br />
-            <p class="lead">Generated code - Observated interface</p>
+            <p class="lead">Generated code - Visited interface</p>
         </div>
         <div class="card">
             <div class="card-body" >
-                <pre id="toDownload3" th:text="${observatedInterfaceCode}"></pre>
+                <pre id="toDownload3" th:text="${visitedInterfaceCode}"></pre>
             </div>
         </div>
         <br />
-        <button type="button" class="btn btn-primary" onclick="downloadDiv('ObservatedInterface.java', 'toDownload3', 'text/plain')">Download code file</button>
+        <button type="button" class="btn btn-primary" onclick="downloadDiv('VisitedInterface.java', 'toDownload3', 'text/plain')">Download code file</button>
 
         <div class="container">
             <br />
-            <p class="lead">Generated code - Observated class</p>
+            <p class="lead">Generated code - Visited class</p>
         </div>
         <div class="card">
             <div class="card-body" >
-                <pre id="toDownload4" th:text="${observatedClassCode}"></pre>
+                <pre id="toDownload4" th:text="${visitedClassCode}"></pre>
             </div>
         </div>
         <br />
-        <button type="button" class="btn btn-primary" onclick="downloadDiv('Observator.java', 'toDownload4', 'text/plain')">Download code file</button>
+        <button type="button" class="btn btn-primary" onclick="downloadDiv('Visited .java', 'toDownload4', 'text/plain')">Download code file</button>
         </div>
 
         <div th:insert="layout/footer"></div>
