--- a/PatternsGenerator/src/main/resources/templates/singleton.html
+++ b/PatternsGenerator/src/main/resources/templates/singleton.html
@@ -11,29 +11,32 @@
 <div th:insert="layout/header"></div>
 
 
-<div id = "alert_placeholder"></div>
-<div class="container">
-    <div class="container">
-        <p class="lead">Singleton generator</p>
-    </div>
-        <form class='needs-validation' action="singleton" method="post" novalidate>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <label for="className">Write name of Singleton's class</label>
-                    <input type="text" id="className" name="className" class="form-control" placeholder="class name" required>
-                    <div class="invalid-feedback">
-                        Class name should not be empty.
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <div class="container">
+                <p class="lead">Singleton generator</p>
+            </div>
+
+            <form class='needs-validation' action="singleton" method="post" novalidate>
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        <label for="className">Write name of Singleton's class</label>
+                        <input type="text" id="className" name="className" class="form-control" placeholder="class name" required value="SingletonExample">
+                        <div class="invalid-feedback">
+                            Class name should not be empty.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="singletonType">Choose implementation you want to use</label>
-                <select class="form-control" id="singletonType" name="singletonType">
-                    <option>Simple (not thread-safe)</option>
-                    <option>Lazy (not thread-safe)</option>
-                    <option>Advanced (thread safe - requires Java 5 or newer)</option>
-                </select>
-            </div>
+                <div class="form-group">
+                    <label for="singletonType">Choose implementation you want to use</label>
+                    <select class="form-control" id="singletonType" name="singletonType">
+                        <option>Simple (not thread-safe)</option>
+                        <option>Lazy (not thread-safe)</option>
+                        <option>Advanced (thread safe - requires Java 5 or newer)</option>
+                    </select>
+                </div>
                 <div class="form-group row">
                     <div class="col">
                         <label>Should source code include comments?</label>
@@ -45,22 +48,27 @@
                         </div>
                     </div>
                 </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Generate code</button>
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary">Generate code</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col">
+            <div class="container">
+                <p class="lead">Generated code</p>
+            </div>
+            <div class="card">
+                <div class="card-body" >
+                    <pre id="toDownload" th:text="${code}"></pre>
                 </div>
             </div>
-        </form>
-        <div class="container">
-            <p class="lead">Generated code</p>
+            <br />
+            <button type="button" class="btn btn-primary" onclick="downloadDiv('singleton.java', 'toDownload', 'text/plain')">Download code file</button>
         </div>
-        <div class="card">
-            <div class="card-body" >
-                <pre id="toDownload" th:text="${code}"></pre>
-            </div>
-        </div>
-    <br />
-    <button type="button" class="btn btn-primary" onclick="downloadDiv('singleton.java', 'toDownload', 'text/plain')">Download code file</button>
+    </div>
 </div>
+
 </body>
 </html>
