--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -22,6 +22,7 @@
                             Patterns list
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="prototype">Prototype</a>
                             <a class="dropdown-item" href="singleton">Singleton</a>
                             <a class="dropdown-item" href="visitor">Visitor</a>
                         </div>
@@ -31,6 +32,7 @@
                             Knowledge base
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="prototypeData">Prototype</a>
                             <a class="dropdown-item" href="singletonData">Singleton</a>
                             <a class="dropdown-item" href="visitorData">Visitor</a>
                         </div>
