--- a/PatternsGenerator/src/main/resources/templates/singleton.html
+++ b/PatternsGenerator/src/main/resources/templates/singleton.html
@@ -22,7 +22,7 @@
             <form class='needs-validation' action="singleton" method="post" novalidate>
                 <div class="form-group row">
                     <div class="col-sm-10">
-                        <label for="className">Write name of Singleton's class</label>
+                        <label for="className">Write name of a Singleton class</label>
                         <input type="text" id="className" name="className" class="form-control" placeholder="class name" required value="SingletonExample">
                         <div class="invalid-feedback">
                             Class name should not be empty.
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="singletonType">Choose implementation you want to use</label>
+                    <label for="singletonType">Choose an implementation you want to use</label>
                     <select class="form-control" id="singletonType" name="singletonType">
                         <option>Simple (not thread-safe)</option>
                         <option>Lazy (not thread-safe)</option>
@@ -70,5 +70,6 @@
     </div>
 </div>
 
+<div th:insert="layout/footer"></div>
 </body>
 </html>
