--- a/PatternsGenerator/src/main/resources/templates/singleton.html
+++ b/PatternsGenerator/src/main/resources/templates/singleton.html
@@ -23,7 +23,7 @@
                 <div class="form-group row">
                     <div class="col-sm-10">
                         <label for="className">Write name of a Singleton class</label>
-                        <input type="text" id="className" name="className" class="form-control" placeholder="class name" required value="SingletonExample">
+                        <input type="text" id="className" name="className" class="form-control" placeholder="class name" required th:value="${singletonName}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             Class name should not be empty.
                         </div>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group">
                     <label for="singletonType">Choose an implementation you want to use</label>
-                    <select class="form-control" id="singletonType" name="singletonType">
+                    <select class="form-control" id="singletonType" name="singletonType" th:value="${singletonType}" onblur="this.form.submit()">
                         <option>Simple (not thread-safe)</option>
                         <option>Lazy (not thread-safe)</option>
                         <option>Advanced (thread safe - requires Java 5 or newer)</option>
@@ -41,7 +41,7 @@
                     <div class="col">
                         <label>Should source code include comments?</label>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}">
+                            <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}" onblur="this.form.submit()">
                             <label class="form-check-label" for="areCommentsIncluded">
                                 Comments included
                             </label>
