--- a/PatternsGenerator/src/main/resources/templates/visitor.html
+++ b/PatternsGenerator/src/main/resources/templates/visitor.html
@@ -21,7 +21,7 @@
                 <div class="form-group row">
                     <div class="col">
                         <label for="className">Write name of Visitor class</label>
-                        <input type="text" id="className" name="className" class="form-control" placeholder="visitor class name" required value="VisitorExample">
+                        <input type="text" id="className" name="className" class="form-control" placeholder="visitor class name" required th:value="${visitorName}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -30,7 +30,7 @@
                 <div class="form-group row">
                     <div class="col">
                         <label for="visitedName">Write name of Visited class</label>
-                        <input type="text" id="visitedName" name="visitedName" class="form-control" placeholder="visited class name" required value="VisitedExample">
+                        <input type="text" id="visitedName" name="visitedName" class="form-control" placeholder="visited class name" required th:value="${visitedName}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -39,7 +39,7 @@
                 <div class="form-group row">
                     <div class="col">
                         <label for="updateMethodName">Write name of method which updates Visitor state</label>
-                        <input type="text" id="updateMethodName" name="updateMethodName" class="form-control" placeholder="update method name" required value="UpdateState">
+                        <input type="text" id="updateMethodName" name="updateMethodName" class="form-control" placeholder="update method name" required th:value="${updateMethod}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -48,7 +48,7 @@
                 <div class="form-group row">
                     <div class="col">
                         <label for="changeStateMethodName">Write name of method which changes Visitor state</label>
-                        <input type="text" id="changeStateMethodName" name="changeStateMethodName" class="form-control" placeholder="state changing method name" required value="ChangeState">
+                        <input type="text" id="changeStateMethodName" name="changeStateMethodName" class="form-control" placeholder="state changing method name" required th:value="${changeMethod}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -57,14 +57,14 @@
                 <label>Define type and name of state field in Visitor class</label>
                 <div class="form-group row">
                     <div class="col">
-                        <input type="text" id="stateType" name="stateType" class="form-control" placeholder="Type of Visitor state" required value="String">
+                        <input type="text" id="stateType" name="stateType" class="form-control" placeholder="Type of Visitor state" required th:value="${visitorStateType}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
                     </div>
 
                     <div class="col">
-                        <input type="text" id="stateName" name="stateName" class="form-control" placeholder="Name of Visitor state" required value="VisitorState">
+                        <input type="text" id="stateName" name="stateName" class="form-control" placeholder="Name of Visitor state" required th:value="${visitorState}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -74,13 +74,13 @@
                 <label>Define type and name of state field in Visited class</label>
                 <div class="form-group row">
                     <div class="col">
-                        <input type="text" id="visitedState" name="visitedState" class="form-control" placeholder="Type of Visited state" required value="String">
+                        <input type="text" id="visitedState" name="visitedState" class="form-control" placeholder="Type of Visited state" required vth:value="${visitedStateType}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
                     </div>
                     <div class="col">
-                        <input type="text" id="visitedStateObject" name="visitedStateObject" class="form-control" placeholder="Name of Visited state" required value="VisitedState">
+                        <input type="text" id="visitedStateObject" name="visitedStateObject" class="form-control" placeholder="Name of Visited state" required th:value="${visitedState}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
@@ -91,7 +91,7 @@
                     <div class="col">
                         <label>Should source code include comments?</label>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}" checked>
+                            <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}" th:value="${areCommentsIncluded}" onblur="this.form.submit()">
                             <label class="form-check-label" for="areCommentsIncluded">
                                 Comments included
                             </label>
