Factory Added! Fixed Visitor input bug

--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -25,6 +25,7 @@
                             <a class="dropdown-item" href="prototype">Prototype</a>
                             <a class="dropdown-item" href="singleton">Singleton</a>
                             <a class="dropdown-item" href="visitor">Visitor</a>
+                            <a class="dropdown-item" href="factory">Factory</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -35,6 +36,7 @@
                             <a class="dropdown-item" href="prototypeData">Prototype</a>
                             <a class="dropdown-item" href="singletonData">Singleton</a>
                             <a class="dropdown-item" href="visitorData">Visitor</a>
+                            <a class="dropdown-item" href="factoryData">Factory</a>
                         </div>
                     </li>
                     <li class="nav-item active">
