--- a/PatternsGenerator/src/main/resources/templates/visitor.html
+++ b/PatternsGenerator/src/main/resources/templates/visitor.html
@@ -74,7 +74,7 @@
                 <label>Define type and name of state field in Visited class</label>
                 <div class="form-group row">
                     <div class="col">
-                        <input type="text" id="visitedState" name="visitedState" class="form-control" placeholder="Type of Visited state" required vth:value="${visitedStateType}" onblur="this.form.submit()">
+                        <input type="text" id="visitedState" name="visitedState" class="form-control" placeholder="Type of Visited state" required th:value="${visitedStateType}" onblur="this.form.submit()">
                         <div class="invalid-feedback">
                             This field should not be empty.
                         </div>
